# django-site

./: README.md  pyproject.toml
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_rename_choise_choice_and_more.py
static/css/: header.css  main.css  question.css  reset.css
templates/: base.html
templates/polls/: details.html  index.html  results.html
